# formatter-builder-rs

./: Cargo.toml  README.md
.github/workflows/: push.yml
bencher/: Cargo.toml
bencher/benches/: basic.rs  from-lossy.rs
bencher/src/: main.rs
src/: lib.rs
